--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ requires-python = ">= 3.8"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["."]
+
 [tool.rye]
 managed = true
 dev-dependencies = []
